--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -5,22 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Airbnb Clone</title>
-  </head>
-  <body style="margin: 0; padding: 0">
-    <header
-      style="background-color: #ff0000; height: 70px; width: 100%"
-    ></header>
-    <main></main>
-    <footer
-      style="
+    <style>
+      header {
+        background-color: #ff0000;
+        height: 70px;
+        width: 100%;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      footer {
         background-color: #00ff00;
         height: 60px;
-        position: absolute;
         bottom: 0;
         text-align: center;
+        position: absolute;
         width: 100%;
-      "
-    >
+      }
+    </style>
+  </head>
+  <body>
+    <header></header>
+    <main></main>
+    <footer>
       <h3>Best School</h3>
     </footer>
   </body>
