--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -5,22 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Airbnb Clone</title>
+    <link rel="stylesheet" href="./styles/2-header.css" />
+    <link rel="stylesheet" href="./styles/2-common.css" />
+    <link rel="stylesheet" href="./styles/2-footer.css" />
   </head>
-  <body style="margin: 0; padding: 0">
-    <header
-      style="background-color: #ff0000; height: 70px; width: 100%"
-    ></header>
+  <body>
+    <header></header>
     <main></main>
-    <footer
-      style="
-        background-color: #00ff00;
-        height: 60px;
-        position: absolute;
-        bottom: 0;
-        text-align: center;
-        width: 100%;
-      "
-    >
+    <footer>
       <h3>Best School</h3>
     </footer>
   </body>
